// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Classes and styles applies className and id props correctly 1`] = `
<div>
  <div
    data-testid="hover-video-player-container"
    style="position: relative;"
  >
    <div
      data-testid="paused-overlay-wrapper"
      style="position: absolute; width: 100%; height: 100%; top: 0px; bottom: 0px; left: 0px; right: 0px; z-index: 1; opacity: 1; transition: opacity 400ms; pointer-events: auto;"
    >
      <div />
    </div>
    <div
      data-testid="loading-overlay-wrapper"
      style="position: absolute; width: 100%; height: 100%; top: 0px; bottom: 0px; left: 0px; right: 0px; z-index: 2; opacity: 0; transition: opacity 400ms; pointer-events: none;"
    >
      <div />
    </div>
    <video
      crossorigin="anonymous"
      data-testid="video-element"
      loop=""
      playsinline=""
      style="display: block; width: 100%; object-fit: cover;"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`sizingMode sizingMode "container" sets correct styling on the player 1`] = `
<div>
  <div
    data-testid="hover-video-player-container"
    style="position: relative;"
  >
    <div
      data-testid="paused-overlay-wrapper"
      style="position: absolute; width: 100%; height: 100%; top: 0px; bottom: 0px; left: 0px; right: 0px; z-index: 1; opacity: 1; transition: opacity 400ms; pointer-events: auto;"
    >
      <div />
    </div>
    <video
      crossorigin="anonymous"
      data-testid="video-element"
      loop=""
      playsinline=""
      style="position: absolute; width: 100%; height: 100%; top: 0px; bottom: 0px; left: 0px; right: 0px; object-fit: cover;"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`sizingMode sizingMode "manual" sets correct styling on the player 1`] = `
<div>
  <div
    data-testid="hover-video-player-container"
    style="position: relative;"
  >
    <div
      data-testid="paused-overlay-wrapper"
      style="z-index: 1; opacity: 1; transition: opacity 400ms; pointer-events: auto;"
    >
      <div />
    </div>
    <video
      crossorigin="anonymous"
      data-testid="video-element"
      loop=""
      playsinline=""
      style="object-fit: cover;"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`sizingMode sizingMode "overlay" sets correct styling on the player 1`] = `
<div>
  <div
    data-testid="hover-video-player-container"
    style="position: relative;"
  >
    <div
      data-testid="paused-overlay-wrapper"
      style="position: relative; z-index: 1; opacity: 1; transition: opacity 400ms; pointer-events: auto;"
    >
      <div />
    </div>
    <video
      crossorigin="anonymous"
      data-testid="video-element"
      loop=""
      playsinline=""
      style="position: absolute; width: 100%; height: 100%; top: 0px; bottom: 0px; left: 0px; right: 0px; object-fit: cover;"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`sizingMode sizingMode "video" sets correct styling on the player 1`] = `
<div>
  <div
    data-testid="hover-video-player-container"
    style="position: relative;"
  >
    <div
      data-testid="paused-overlay-wrapper"
      style="position: absolute; width: 100%; height: 100%; top: 0px; bottom: 0px; left: 0px; right: 0px; z-index: 1; opacity: 1; transition: opacity 400ms; pointer-events: auto;"
    >
      <div />
    </div>
    <video
      crossorigin="anonymous"
      data-testid="video-element"
      loop=""
      playsinline=""
      style="display: block; width: 100%; object-fit: cover;"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;
